--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
   <link rel="stylesheet" href="style.css" />
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
   <div class="container">
     <div class="card">
       <img src="images/image-qr-code.png"/>
+        <span class="caption">
+        <h2>Improve your front-end skills by building projects</h2>
+      </span>
+      <span class="caption"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></span>
+        
 
     </div>
     
