--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
-      <img src="images/image-qr-code.png"/>
-        <span class="caption">
-        <h2>Improve your front-end skills by building projects</h2>
-      </span>
-      <span class="caption"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></span>
-        
-
+      <img src="images/image-qr-code.png" alt="qr code to vist frontend mentors"/>
+      <h2 class="caption">
+        Improve your front-end skills by building projects
+      </h2>
+      <p class="caption">
+        Scan the QR code to visit Frontend   Mentor and take your coding skills to the next level
+      </p>
     </div>
-    
-  </div>
+  </main>
 </body>
 </html>
